LU-8527 obdclass: declare more credits for llog append

It is suspected that the concurrent multiple llog append operations,
such as unlink large striped (large EA) files concurrently, that can
fill up an empty llog in very short time. Because the llog may be
shared (at the same time) by many concurrent modifications, everyone
needs to prepare three llogs (chd_current_log, chd_next_log,
chd_next_log2) during the declare phase.

In theory, that is still not absolutely safe. But let's pray that it
will NOT happen that more than 2 llogs are filled up by multiple
concurrent modifications in very short time.

Signed-off-by: Fan Yong <fan.yong@intel.com>
Change-Id: I744e2fbc0922c6ef16dcb8d0010672314b394b98